--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@ div {text-align: center;}
 <h1> About Greg<h1>
 <p>Greg Greenland, Age 32. Greg created this website in order to advertise his local Arcade.</p>
 <p>Everything went well, but we decided to expand even more!</p>
+<p>Greg Greenland is the older brother of Greg Wlliamson-12yrs. And the younger brother of Greg Johnson-50yrs.</p>
 
 <h1>Pricing</h1>
 <p>style="color: we have Go-karting- 75$ for the first 10 people, and 15$ for each additional person.</p>
