--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@ div {text-align: center;}
 <script src="https://cdn.rawgit.com/labnol/files/master/yt.js"></script>
 
 <h1 style="color:blue">Welcome To GregsArcade.com!</h1>
-<p>the offical site of Greg's Arcade.</p>
+<p style="color:blue">the offical site of Greg's Arcade.</p>
 
 <h1 style="color:blue"> About Greg<h1>
 <p style="color:blue;">Greg Greenland, Age 32. Greg created this website in order to advertise his local Arcade.</p>
 <p style="color:blue;">Everything went well, but we decided to expand even more!</p>
 <p style="color:blue;">Greg Greenland is the older brother of Greg Wlliamson-12yrs. And the younger brother of Greg Johnson-50yrs.</p>
 
-<h1>Pricing</h1>
+<h1 style="color:blue">Pricing</h1>
 <p style="color:blue;">we have Go-karting- 75$ for the first 10 people, and 15$ for each additional person.</p>
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRSBLofSXLEfTdmBbtsdIP4WJqyPV7kxFUQ3nNZKCzoebZ7nCY:https://prod-rte-static.rakutentravelxchange.com/663e9b23-6b6e-48d4-9f32-e4e47249ea5e.jpg%3Fheight%3D500%26format%3Dwebp&s" alt="gokarting" class="center">
 <p style="color:blue;">we have Arcades- 230$ for the first 10 people, and 10$ for each additional person.</p>
