--- a/gamepages/gamecentral.html
+++ b/gamepages/gamecentral.html
@@ -21,5 +21,13 @@ div {text-align: center;}
 
 <h1>Welcome To The Games Page!</h1>
 
+<div style="text-align:center">    
+  <a href="https://gregslawnmowingservices.github.io/gregsarcade">HOME</a>
+</div>
+
+<div style="text-align:center">    
+  <a href="https://gregslawnmowingservices.github.io/gamepages/Sonic">BUY HERE</a>
+</div>
+
 </body>
 </html>
