--- a/gamepages/gamecentral.html
+++ b/gamepages/gamecentral.html
@@ -26,7 +26,7 @@ div {text-align: center;}
 </div>
 
 <div style="text-align:center">    
-  <a href="https://gregslawnmowingservices.github.io/gamepages/Sonic">Sonic</a>
+  <a href="https://gregslawnmowingservices.github.io/gregsarcade/gamepages/Sonic">Sonic</a>
 </div>
 
 </body>
