--- a/gamepages/gamecentral.html
+++ b/gamepages/gamecentral.html
@@ -29,5 +29,11 @@ div {text-align: center;}
   <a href="https://gregslawnmowingservices.github.io/gregsarcade/gamepages/Sonic">Sonic</a>
 </div>
 
+<div style="text-align:center">    
+  <a href="https://gregslawnmowingservices.github.io/gregsarcade/gamepages/angrymexicansvstrump">AngryMexicansVsTrump</a>
+</div>
+
+
+
 </body>
 </html>
