--- a/gamepages/mario.html
+++ b/gamepages/mario.html
@@ -1,1 +1,26 @@
+<!DOCTYPE html>
+<html>
+<head>
+<title>Greg's Arcade.com</title>
+<link href='https://fonts.googleapis.com/css?family=VT323' rel='stylesheet'>
+<style>
 
+body {
+    font-family: 'VT323';font-size: 22px;
+      background-image: url('https://t3.ftcdn.net/jpg/05/09/27/82/240_F_509278239_fkkwanP7vTmPiNPj5yRddZN2FwHSN91S.jpg')
+}
+h1 {text-align: center;}
+p {text-align: center;}
+div {text-align: center;}
+</style>
+</head>
+<body>
+<div data-video="Ebj1wg1Phyk" data-autoplay="1" hidden="1" data-loop="1" id="youtube-audio"></div>
+<script src="https://www.youtube.com/iframe_api"></script>
+<script src="https://cdn.rawgit.com/labnol/files/master/yt.js"></script>
+
+<div style="text-align: center;">
+<iframe src="https://funhtml5games.com?embed=marioeditor" style="width:1024px;height:540px;border:none;" frameborder="0" scrolling="no"></iframe>
+</div>
+</body>
+</html>
