--- a/gamepages/gamecentral.html
+++ b/gamepages/gamecentral.html
@@ -33,6 +33,9 @@ div {text-align: center;}
   <a href="https://gregslawnmowingservices.github.io/gregsarcade/gamepages/angrymexicansvstrump">AngryMexicansVsTrump</a>
 </div>
 
+<div style="text-align:center">    
+  <a href="https://gregslawnmowingservices.github.io/gregsarcade/gamepages/mario">AngryMexicansVsTrump</a>
+</div>
 
 
 </body>
