--- a/gamepages/gamecentral.html
+++ b/gamepages/gamecentral.html
@@ -34,7 +34,7 @@ div {text-align: center;}
 </div>
 
 <div style="text-align:center">    
-  <a href="https://gregslawnmowingservices.github.io/gregsarcade/gamepages/mario">AngryMexicansVsTrump</a>
+  <a href="https://gregslawnmowingservices.github.io/gregsarcade/gamepages/mario">mario</a>
 </div>
 
 
